Bug 415347 - Panels/Docks don't lose background
Summary: Panels/Docks don't lose background
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-19 10:30 UTC by vandalhj
Modified: 2019-12-20 13:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.6
Sentry Crash Report:


Attachments
with the options on (3.40 MB, image/png)
2019-12-19 10:30 UTC, vandalhj
Details
Odd behavior with quatter tiling (1.33 MB, image/png)
2019-12-19 22:12 UTC, vandalhj
Details
non-busy wallpaper seems to fix it (923.20 KB, image/png)
2019-12-19 22:12 UTC, vandalhj
Details
odd behavior few minutes later into the session. (1.43 MB, image/png)
2019-12-19 22:18 UTC, vandalhj
Details
my layout (10.99 KB, text/plain)
2019-12-20 12:33 UTC, vandalhj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vandalhj 2019-12-19 10:30:02 UTC
Created attachment 124585 [details]
with the options on

SUMMARY


STEPS TO REPRODUCE
1. Create unity-like docks (with autohide on sidedocks), tick 'ukryj tło, gdy jest niepotrzebne'[hide background, when not needed ?], in 'wygląd' [appearance?].
2. have no fullscreen applications 
3. Have some transparency, or not, i persoanlly have

OBSERVED RESULT

top bar don't lose it's background (neither does side dock)

EXPECTED RESULT

both bars have no background when no windows touch them.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 20.04
(available in About System)
KDE Plasma Version:5.17.4 
KDE Frameworks Version: 5.65.0
Qt Version: 5.4.0-9

ADDITIONAL INFORMATION

I think it worked this way earlier, but have no rig to prove it.
Comment 1 Michail Vourlakos 2019-12-19 12:14:01 UTC
Your background is busy, so full transparency is not suggested.

A. In Appearance, Background, Set busy opacity to 0%
B. Or change your background to something that provides common brightness for the entire edge
Comment 2 Michail Vourlakos 2019-12-19 17:37:57 UTC
described the case...
Comment 3 vandalhj 2019-12-19 22:12:19 UTC
Created attachment 124596 [details]
Odd behavior with quatter tiling
Comment 4 vandalhj 2019-12-19 22:12:53 UTC
Created attachment 124598 [details]
non-busy wallpaper seems to fix it
Comment 5 vandalhj 2019-12-19 22:17:25 UTC
I assume that side panel will also go no-background when wallpaper would be not busy. On the other hand i found new bug with quarter tiling (with both lower corners). Then, with settings after moving windows around, it came back to not showing transparency without changing background. Odd.
Comment 6 vandalhj 2019-12-19 22:18:19 UTC
Created attachment 124600 [details]
odd behavior few minutes later into the session.
Comment 7 Michail Vourlakos 2019-12-20 06:06:36 UTC
(In reply to vandalhj from comment #5)
> I assume that side panel will also go no-background when wallpaper would be
> not busy. On the other hand i found new bug with quarter tiling (with both
> lower corners). Then, with settings after moving windows around, it came
> back to not showing transparency without changing background. Odd.

For each issue you should open a different issue tracker and in it you must include screenshots describing the case and also your Latte layout file to test it out in my system and your wallpaper link.
Comment 8 vandalhj 2019-12-20 12:33:08 UTC
Created attachment 124612 [details]
my layout
Comment 9 vandalhj 2019-12-20 12:43:44 UTC
https://store.kde.org/p/1325591 wallpaper where there are no problems
https://www.pling.com/s/Wallpapers/p/1069418/ wallpaper where there are problems. It's quite strange, that when i set wallpaper with no problems with busy option , the problematic wallpaper at first respect no background rules (after solid color and/or quarter tiling it is struck with busy transparency in top bar for no apparent reason). 

So i think it's actually one bug (it don't recheck it for some odd reason?).
Comment 10 Michail Vourlakos 2019-12-20 13:14:10 UTC
Git commit 51caa06615072c2a6f657b1e7232cad1b8494c31 by Michail Vourlakos.
Committed on 20/12/2019 at 13:08.
Pushed by mvourlakos into branch 'v0.9'.

improve criteria for side panels dyamic touching

--Latte panels when they touch each other are informing
each other in order to provide consistent appearance. For
example the Unity mode where a top panel and a left panel
exist at the same time. In such case if the left panel is
INBUSY background state then the top panel is informed and
because inBusy state also. This way the top border of left dock
background does not look out of place. ON THE OTHER hand if
the left dock is hidden because the use has chosen auto-hide
visibility mode or any of the dodge(s) choices then the top
panel does not have to stay in isBusy state. The patch fixes
this by applying this behavior only when the left dock is shown
e.g. the mouse has entered the dock or the dodge mode is not
activated
FIXED-IN:0.9.6

M  +2    -2    app/wm/tracker/windowstracker.cpp
M  +4    -2    containment/package/contents/ui/VisibilityManager.qml

https://commits.kde.org/latte-dock/51caa06615072c2a6f657b1e7232cad1b8494c31
Comment 11 Michail Vourlakos 2019-12-20 13:14:38 UTC
Git commit 9dd798477e9d9ae956878f31df6f88a004a2ab39 by Michail Vourlakos.
Committed on 20/12/2019 at 13:14.
Pushed by mvourlakos into branch 'master'.

improve criteria for side panels dyamic touching

--Latte panels when they touch each other are informing
each other in order to provide consistent appearance. For
example the Unity mode where a top panel and a left panel
exist at the same time. In such case if the left panel is
INBUSY background state then the top panel is informed and
because inBusy state also. This way the top border of left dock
background does not look out of place. ON THE OTHER hand if
the left dock is hidden because the use has chosen auto-hide
visibility mode or any of the dodge(s) choices then the top
panel does not have to stay in isBusy state. The patch fixes
this by applying this behavior only when the left dock is shown
e.g. the mouse has entered the dock or the dodge mode is not
activated
FIXED-IN:0.9.6

M  +2    -2    app/wm/tracker/windowstracker.cpp
M  +4    -2    containment/package/contents/ui/VisibilityManager.qml

https://commits.kde.org/latte-dock/9dd798477e9d9ae956878f31df6f88a004a2ab39
Comment 12 vandalhj 2019-12-20 13:27:26 UTC
Thanks a lot for fixing it, btw now it feels like true replacement of my unity workflow.